--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PenaltyClient
+application.vendor=macbook
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,34 @@ dist.jar=${dist.dir}/PenaltyClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PenaltyClient
+endorsed.classpath=
 excludes=
+file.reference.javafx-sdk-23.0.2-lib=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib
+file.reference.javafx-swt.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx-swt.jar
+file.reference.javafx.base.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.base.jar
+file.reference.javafx.controls.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.controls.jar
+file.reference.javafx.fxml.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.fxml.jar
+file.reference.javafx.graphics.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.graphics.jar
+file.reference.javafx.media.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.media.jar
+file.reference.javafx.swing.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.swing.jar
+file.reference.javafx.web.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.web.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.javafx-swt.jar-1}:\
+    ${file.reference.javafx.base.jar-1}:\
+    ${file.reference.javafx.controls.jar-1}:\
+    ${file.reference.javafx.fxml.jar-1}:\
+    ${file.reference.javafx.graphics.jar-1}:\
+    ${file.reference.javafx.media.jar-1}:\
+    ${file.reference.javafx.swing.jar-1}:\
+    ${file.reference.javafx.web.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.javafx-sdk-23.0.2-lib}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -79,10 +99,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
