--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,32 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PenaltyClient
 endorsed.classpath=
 excludes=
-file.reference.javafx-sdk-23.0.2-lib=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib
-file.reference.javafx-swt.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx-swt.jar
-file.reference.javafx.base.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.base.jar
-file.reference.javafx.controls.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.controls.jar
-file.reference.javafx.fxml.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.fxml.jar
-file.reference.javafx.graphics.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.graphics.jar
-file.reference.javafx.media.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.media.jar
-file.reference.javafx.swing.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.swing.jar
-file.reference.javafx.web.jar-1=/Users/macbook/Downloads/javafx-sdk-23.0.2/lib/javafx.web.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.javafx-swt.jar-1}:\
-    ${file.reference.javafx.base.jar-1}:\
-    ${file.reference.javafx.controls.jar-1}:\
-    ${file.reference.javafx.fxml.jar-1}:\
-    ${file.reference.javafx.graphics.jar-1}:\
-    ${file.reference.javafx.media.jar-1}:\
-    ${file.reference.javafx.swing.jar-1}:\
-    ${file.reference.javafx.web.jar-1}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=\
-    ${file.reference.javafx-sdk-23.0.2-lib}
+javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
