--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\This PC\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=/Users/macbook/Library/Application Support/NetBeans/12.0/build.properties
