--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PenaltyClient
 endorsed.classpath=
 excludes=
+file.reference.penalty-common.jar=..\\..\\penalty-common\\dist\\penalty-common.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.penalty-common.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
